--- a/CV-MEJORADO.css
+++ b/CV-MEJORADO.css
@@ -125,3 +125,34 @@ a {
 .inicioFooter {
     text-align: center;
 }
+/* Pantalla pequeña */
+@media (max-width: 767px) {
+    /* Estilos para pantallas pequeñas */
+  }
+  
+  /* Pantalla mediana */
+  @media (min-width: 768px) and (max-width: 991px) {
+    /* Estilos para pantallas medianas */
+  }
+  
+  /* Pantalla grande */
+  @media (min-width: 992px) {
+    /* Estilos para pantallas grandes */
+  }
+  body {
+    font-size: 14px;
+  }
+  
+  @media (max-width: 767px) {
+    body {
+      font-size: 12px;
+    }
+  }
+  
+  @media (min-width: 992px) {
+    body {
+      font-size: 16px;
+    }
+  }
+  
+  
